# DownloadSorter

./: .gitignore  INSTALL.md  LICENSE.txt  compile_commands.json  install.sh  installer.iss  manifest.json  readme.md  test_qt_deploy.cmake  update_installer.ps1  update_repository.ps1
.github/workflows/: build-release.yml
Updater/: CMakeLists.txt  updater.cpp
config/: config.xml  config.xml.autosave
docs/: INSTALL.md
eUpdater/: CMakeLists.txt  README.md
eUpdater/cmake/: eUpdaterConfig.cmake.in
eUpdater/src/: main.cpp  updater.cpp  updater.h
repository/: 2024-10-04-2315_meta.7z  2024-10-06-1110_meta.7z  Updates.xml
repository/com.vendor.root/: 0.1.0-1bin.7z.sha1  0.1.0-1meta.7z  0.1.0-1plugins.7z  0.1.0-1plugins.7z.sha1  0.1.0-1translations.7z  0.1.0-1translations.7z.sha1
scripts/: bump_version.ps1  deploy.sh  eDeployLinux.sh  eDeployWindows.ps1  eInstall.sh  generate_release_notes.ps1  generic-deploy.sh  generic-desktop-install.sh  post-install.sh  readme.md  release_template.md  run.sh  update_installer.ps1
src/: CMakeLists.txt  CMakeLists.txt.autosave  icons.qrc  main.cpp
src/DownloadSorter/: Dashboard.cpp  Dashboard.h  DownloadSorter.cpp  SettingsDialog.cpp  SettingsManager.cpp  subclass.cpp  subclass.h
src/Include/DownloadSorter/: Dashboard.h  DownloadSorter.h  DownloadSorterConfig.h  DownloadSorterWidget.h  SettingsDialog.h  SettingsManager.h  subclass.h
src/Source/DownloadSorter/: DownloadSorterConfig.cpp  DownloadSorterWidget.cpp  SettingsDialog.cpp
src/cmake/: DeployRuntime.cmake.in  PruneInstall.cmake
src/icons/: Download Sorter.rc  icons.qrc
